Fixing list bbcode spacing.

--- a/upload/style/Oxygen/Oxygen.css
+++ b/upload/style/Oxygen/Oxygen.css
@@ -1384,6 +1384,11 @@ G - MAIN CONTENT - TOPICS AND PARSED CONTENT
 	list-style-type: decimal;
 	}
 	
+#brd-wrap .entry-content ol p,
+#brd-wrap .entry-content ul p {
+	padding: 0;
+	}
+	
 #brd-wrap .entry-content ol.alpha {
 	list-style-type: upper-alpha;
 	}
